--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,18 +33,13 @@
 
     <link type="text/css" href="/vendor/notyf/notyf.min.css" rel="stylesheet" />
     <link type="text/css" href="/css/volt.css" rel="stylesheet" />
+    <link type="text/css" href="/css/beholder.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="/vendor/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Vendor JS -->
-    <script src="/vendor/onscreen/dist/on-screen.umd.min.js"></script>
-
-    <!-- Slider -->
-    <script src="/vendor/nouislider/distribute/nouislider.min.js"></script>
 
     <!-- Smooth scroll -->
     <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
